tests/single_instruction_translation_validation/mcsema/register-variants-samereg/cvtps2dq_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:192:25: error: use of undefined value '@my.fabs.f32'
  %19 = tail call float @my.fabs.f32(float %18) #22
                        ^
0.02user 0.03system 0:00.06elapsed 78%CPU (0avgtext+0avgdata 27484maxresident)k
0inputs+16outputs (0major+3288minor)pagefaults 0swaps
